[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meta_smartgrid_rl"
version = "0.1.0"
description = "Smart Grid optimization environment for Reinforcement Learning"
authors = [
    {name = "Nikhil Pande"}
]
dependencies = [
    "gymnasium",
    "numpy",
    "torch",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"  # This fixes the missing dependency error
]
requires-python = ">=3.10"

# This fixes the "Missing [project.scripts] server entry point" error
[project.scripts]
server = "inference:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["meta_smartgrid_rl*"]